--- a/chesster/gui/res/calibration_dialog.ui
+++ b/chesster/gui/res/calibration_dialog.ui
@@ -54,7 +54,7 @@
         <string>5000</string>
        </property>
       </widget>
-      <widget class="QLabel" name="label">
+      <widget class="QLabel" name="label_vbc_1">
        <property name="geometry">
         <rect>
          <x>100</x>
@@ -67,7 +67,7 @@
         <string>Amount of training images (default: 5000)</string>
        </property>
       </widget>
-      <widget class="QCheckBox" name="checkBox_vbc_showdata">
+      <widget class="QCheckBox" name="checkBox_vbc_savedata">
        <property name="geometry">
         <rect>
          <x>100</x>
@@ -77,7 +77,7 @@
         </rect>
        </property>
        <property name="text">
-        <string>Show Images while capturing data</string>
+        <string>Save taken images</string>
        </property>
       </widget>
       <widget class="QCheckBox" name="checkBox_vbc_calibratecolor">
@@ -93,7 +93,7 @@
         <string>Calibrate Color Threshold beforehand</string>
        </property>
       </widget>
-      <widget class="QLabel" name="label_2">
+      <widget class="QLabel" name="label_vbc_2">
        <property name="geometry">
         <rect>
          <x>20</x>
@@ -119,7 +119,7 @@
         <string>NAN</string>
        </property>
       </widget>
-      <widget class="QLabel" name="label_4">
+      <widget class="QLabel" name="label_vbc_4">
        <property name="geometry">
         <rect>
          <x>20</x>
@@ -139,6 +139,42 @@
        </property>
        <property name="textFormat">
         <enum>Qt::AutoText</enum>
+       </property>
+       <property name="wordWrap">
+        <bool>true</bool>
+       </property>
+      </widget>
+      <widget class="QCheckBox" name="checkBox_vbc_skip">
+       <property name="geometry">
+        <rect>
+         <x>100</x>
+         <y>160</y>
+         <width>251</width>
+         <height>20</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Skip Data generation and use available data</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_usedata">
+       <property name="geometry">
+        <rect>
+         <x>370</x>
+         <y>150</y>
+         <width>151</width>
+         <height>71</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>8</pointsize>
+         <italic>true</italic>
+         <underline>false</underline>
+        </font>
+       </property>
+       <property name="text">
+        <string>Note: Place data in resources/VBC_Data/ and name it &quot;training_data_Input.csv&quot;, &quot;training_data_Output.csv&quot;</string>
        </property>
        <property name="wordWrap">
         <bool>true</bool>
@@ -194,7 +230,7 @@
      </widget>
     </item>
     <item>
-     <widget class="QPushButton" name="pushButton">
+     <widget class="QPushButton" name="pushButton_start">
       <property name="text">
        <string>Start Calibration</string>
       </property>
