--- a/chesster/gui/res/window.ui
+++ b/chesster/gui/res/window.ui
@@ -74,7 +74,28 @@
     </item>
     <item>
      <layout class="QGridLayout" name="gridLayout">
-      <item row="1" column="0">
+      <item row="0" column="3">
+       <widget class="QPushButton" name="pushButton_3">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="MinimumExpanding">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="font">
+         <font>
+          <pointsize>16</pointsize>
+         </font>
+        </property>
+        <property name="cursor">
+         <cursorShape>PointingHandCursor</cursorShape>
+        </property>
+        <property name="text">
+         <string>Schachregeln</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="0">
        <widget class="QPushButton" name="pushButton_2">
         <property name="enabled">
          <bool>true</bool>
@@ -98,10 +119,10 @@
         </property>
        </widget>
       </item>
-      <item row="1" column="4">
-       <widget class="QPushButton" name="pushButton_3">
+      <item row="0" column="1">
+       <widget class="QPushButton" name="pushButton_4">
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Minimum" vsizetype="MinimumExpanding">
+         <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
@@ -111,11 +132,8 @@
           <pointsize>16</pointsize>
          </font>
         </property>
-        <property name="cursor">
-         <cursorShape>PointingHandCursor</cursorShape>
-        </property>
         <property name="text">
-         <string>Schachregeln</string>
+         <string>Calibration</string>
         </property>
        </widget>
       </item>
@@ -136,7 +154,7 @@
      <x>0</x>
      <y>0</y>
      <width>569</width>
-     <height>20</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -183,6 +201,14 @@
     <string>Options</string>
    </property>
   </action>
+  <action name="actionCalibration">
+   <property name="text">
+    <string>Calibration</string>
+   </property>
+   <property name="toolTip">
+    <string>Calibration</string>
+   </property>
+  </action>
  </widget>
  <resources/>
  <connections>
@@ -193,8 +219,8 @@
    <slot>trigger()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>213</x>
-     <y>562</y>
+     <x>558</x>
+     <y>734</y>
     </hint>
     <hint type="destinationlabel">
      <x>-1</x>
@@ -209,8 +235,8 @@
    <slot>trigger()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>213</x>
-     <y>533</y>
+     <x>188</x>
+     <y>734</y>
     </hint>
     <hint type="destinationlabel">
      <x>-1</x>
@@ -227,6 +253,22 @@
     <hint type="sourcelabel">
      <x>213</x>
      <y>504</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>pushButton_4</sender>
+   <signal>clicked()</signal>
+   <receiver>actionCalibration</receiver>
+   <slot>trigger()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>284</x>
+     <y>663</y>
     </hint>
     <hint type="destinationlabel">
      <x>-1</x>
