--- a/chesster/gui/res/midgame_and_game_dialog.ui
+++ b/chesster/gui/res/midgame_and_game_dialog.ui
@@ -439,6 +439,45 @@
      <string>Empty</string>
     </property>
    </widget>
+   <widget class="QGroupBox" name="groupBox_2">
+    <property name="geometry">
+     <rect>
+      <x>400</x>
+      <y>60</y>
+      <width>211</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="title">
+     <string>Spieler am Zug</string>
+    </property>
+    <widget class="QRadioButton" name="radioButton">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>20</y>
+       <width>51</width>
+       <height>17</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Weiß</string>
+     </property>
+    </widget>
+    <widget class="QRadioButton" name="radioButton_3">
+     <property name="geometry">
+      <rect>
+       <x>110</x>
+       <y>20</y>
+       <width>81</width>
+       <height>17</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Schwarz</string>
+     </property>
+    </widget>
+   </widget>
    <zorder>HintButton</zorder>
    <zorder>Button_b</zorder>
    <zorder>Button_Q</zorder>
@@ -461,6 +500,7 @@
    <zorder>Field_Label_Text</zorder>
    <zorder>Input_Field</zorder>
    <zorder>Button_empty</zorder>
+   <zorder>groupBox_2</zorder>
   </widget>
   <widget class="Line" name="line">
    <property name="geometry">
